--- a/Shop/confirmation.html
+++ b/Shop/confirmation.html
@@ -63,7 +63,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 			<div class="col-md-4 col-xs-12 col-sm-4">
 				<!-- Site Logo -->
 				<div class="logo text-center">
-					<a href="index.html">
+					<a href="index.php">
 						<!-- replace logo here -->
 						<svg width="135px" height="29px" viewBox="0 0 155 29" version="1.1"
 							 xmlns="http://www.w3.org/2000/svg"
@@ -171,7 +171,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 					<!-- Home -->
 					<li class="dropdown ">
-						<a href="index.html">Home</a>
+						<a href="index.php">Home</a>
 					</li><!-- / Home -->
 
 
@@ -192,8 +192,8 @@ FACEBOOK: https://www.facebook.com/themefisher
 									<ul>
 										<li class="dropdown-header">Login/Register</li>
 										<li role="separator" class="divider"></li>
-										<li><a href="login.html">Login</a></li>
-										<li><a href="signin.html">Register</a></li>
+										<li><a href="login.php">Login</a></li>
+										<li><a href="signin.php">Register</a></li>
 									</ul>
 								</div>
 								<div class="col-lg-6 col-md-6 mb-sm-3">
