--- a/Shop/forget-password.html
+++ b/Shop/forget-password.html
@@ -56,7 +56,7 @@ FACEBOOK: https://www.facebook.com/themefisher
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="block text-center">
-          <a class="logo" href="index.html">
+          <a class="logo" href="index.php">
             <img src="images/logo.png" alt="">
           </a>
           <h2 class="text-center">Welcome Back</h2>
@@ -69,7 +69,7 @@ FACEBOOK: https://www.facebook.com/themefisher
               <button type="submit" class="btn btn-main text-center">Request password reset</button>
             </div>
           </form>
-          <p class="mt-20"><a href="login.html">Back to log in</a></p>
+          <p class="mt-20"><a href="login.php">Back to log in</a></p>
         </div>
       </div>
     </div>
