some shopping cart logic

--- a/Shop/checkout.html
+++ b/Shop/checkout.html
@@ -177,7 +177,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 					<!-- Shop -->
 					<li class="dropdown ">
-						<a href="shop.html">Shop</a>
+						<a href="shop.php">Shop</a>
 					</li>
 					<li class="dropdown dropdown-slide">
 						<a href="#!" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
@@ -326,11 +326,11 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div class="block">
                      <h4 class="widget-title">Order Summary</h4>
                      <div class="media product-card">
-                        <a class="pull-left" href="product-single.html">
+                        <a class="pull-left" href="product-single.php">
                            <img class="media-object" src="images/shop/cart/cart-1.jpg" alt="Image" />
                         </a>
                         <div class="media-body">
-                           <h4 class="media-heading"><a href="product-single.html">Ambassador Heritage 1921</a></h4>
+                           <h4 class="media-heading"><a href="product-single.php">Ambassador Heritage 1921</a></h4>
                            <p class="price">1 x $249</p>
                            <span class="remove" >Remove</span>
                         </div>
@@ -409,7 +409,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 						<a href="contact.html">CONTACT</a>
 					</li>
 					<li>
-						<a href="shop.html">SHOP</a>
+						<a href="shop.php">SHOP</a>
 					</li>
 					<li>
 						<a href="pricing.html">Pricing</a>
