--- a/Shop/confirmation.html
+++ b/Shop/confirmation.html
@@ -177,7 +177,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 					<!-- Shop -->
 					<li class="dropdown ">
-						<a href="shop.html">Shop</a>
+						<a href="shop.php">Shop</a>
 					</li>
 					<li class="dropdown dropdown-slide">
 						<a href="#!" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
@@ -257,7 +257,7 @@ FACEBOOK: https://www.facebook.com/themefisher
         	<i class="tf-ion-android-checkmark-circle"></i>
           <h2 class="text-center">Thank you! For your payment</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, sed.</p>
-          <a href="shop.html" class="btn btn-main mt-20">Continue Shopping</a>
+          <a href="shop.php" class="btn btn-main mt-20">Continue Shopping</a>
         </div>
       </div>
     </div>
@@ -295,7 +295,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 						<a href="contact.html">CONTACT</a>
 					</li>
 					<li>
-						<a href="shop.html">SHOP</a>
+						<a href="shop.php">SHOP</a>
 					</li>
 					<li>
 						<a href="pricing.html">Pricing</a>
