--- a/Shop/empty-cart.html
+++ b/Shop/empty-cart.html
@@ -177,7 +177,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 					<!-- Shop -->
 					<li class="dropdown ">
-						<a href="shop.html">Shop</a>
+						<a href="shop.php">Shop</a>
 					</li>
 					<li class="dropdown dropdown-slide">
 						<a href="#!" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
@@ -257,7 +257,7 @@ FACEBOOK: https://www.facebook.com/themefisher
         	<i class="tf-ion-ios-cart-outline"></i>
           	<h2 class="text-center">Your cart is currently empty.</h2>
           	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, sed.</p>
-          	<a href="shop.html" class="btn btn-main mt-20">Return to shop</a>
+          	<a href="shop.php" class="btn btn-main mt-20">Return to shop</a>
       </div>
     </div>
   </div>
@@ -294,7 +294,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 						<a href="contact.html">CONTACT</a>
 					</li>
 					<li>
-						<a href="shop.html">SHOP</a>
+						<a href="shop.php">SHOP</a>
 					</li>
 					<li>
 						<a href="pricing.html">Pricing</a>
