--- a/Shop/faq.html
+++ b/Shop/faq.html
@@ -178,7 +178,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 					<!-- Shop -->
 					<li class="dropdown ">
-						<a href="shop.html">Shop</a>
+						<a href="shop.php">Shop</a>
 					</li>
 					<li class="dropdown dropdown-slide">
 						<a href="#!" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
@@ -323,7 +323,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 						<a href="contact.html">CONTACT</a>
 					</li>
 					<li>
-						<a href="shop.html">SHOP</a>
+						<a href="shop.php">SHOP</a>
 					</li>
 					<li>
 						<a href="pricing.html">Pricing</a>
