--- a/Shop/index_original.html
+++ b/Shop/index_original.html
@@ -187,7 +187,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 									<ul>
 										<li class="dropdown-header">Pages</li>
 										<li role="separator" class="divider"></li>
-										<li><a href="shop.html">Shop</a></li>
+										<li><a href="shop.php">Shop</a></li>
 										<li><a href="checkout.html">Checkout</a></li>
 										<li><a href="cart.html">Cart</a></li>
 										<li><a href="pricing.html">Pricing</a></li>
@@ -201,7 +201,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 									<ul>
 										<li class="dropdown-header">Layout</li>
 										<li role="separator" class="divider"></li>
-										<li><a href="product-single.html">Product Details</a></li>
+										<li><a href="product-single.php">Product Details</a></li>
 										<li><a href="shop-sidebar.html">Shop With Sidebar</a></li>
 
 									</ul>
@@ -258,7 +258,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 								<!-- Mega Menu -->
 								<div class="col-sm-3 col-xs-12">
-									<a href="shop.html">
+									<a href="shop.php">
 										<img class="img-responsive" src="images/shop/header-img.jpg" alt="menu image" />
 									</a>
 								</div>
@@ -308,7 +308,7 @@ FACEBOOK: https://www.facebook.com/themefisher
         <div class="col-lg-8 text-center">
           <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">PRODUCTS</p>
           <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">The beauty of nature <br> is hidden in details.</h1>
-          <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.html">Shop Now</a>
+          <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.php">Shop Now</a>
         </div>
       </div>
     </div>
@@ -319,7 +319,7 @@ FACEBOOK: https://www.facebook.com/themefisher
         <div class="col-lg-8 text-left">
           <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">PRODUCTS</p>
           <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">The beauty of nature <br> is hidden in details.</h1>
-          <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.html">Shop Now</a>
+          <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.php">Shop Now</a>
         </div>
       </div>
     </div>
@@ -330,7 +330,7 @@ FACEBOOK: https://www.facebook.com/themefisher
         <div class="col-lg-8 text-right">
           <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">PRODUCTS</p>
           <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">The beauty of nature <br> is hidden in details.</h1>
-          <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.html">Shop Now</a>
+          <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.php">Shop Now</a>
         </div>
       </div>
     </div>
@@ -411,7 +411,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       	</div>
 					</div>
 					<div class="product-content">
-						<h4><a href="product-single.html">Reef Boardsport</a></h4>
+						<h4><a href="product-single.php">Reef Boardsport</a></h4>
 						<p class="price">$200</p>
 					</div>
 				</div>
@@ -437,7 +437,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       	</div>
 					</div>
 					<div class="product-content">
-						<h4><a href="product-single.html">Rainbow Shoes</a></h4>
+						<h4><a href="product-single.php">Rainbow Shoes</a></h4>
 						<p class="price">$200</p>
 					</div>
 				</div>
@@ -463,7 +463,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       	</div>
 					</div>
 					<div class="product-content">
-						<h4><a href="product-single.html">Strayhorn SP</a></h4>
+						<h4><a href="product-single.php">Strayhorn SP</a></h4>
 						<p class="price">$230</p>
 					</div>
 				</div>
@@ -489,7 +489,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       	</div>
 					</div>
 					<div class="product-content">
-						<h4><a href="product-single.html">Bradley Mid</a></h4>
+						<h4><a href="product-single.php">Bradley Mid</a></h4>
 						<p class="price">$200</p>
 					</div>
 				</div>
@@ -515,7 +515,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       	</div>
 					</div>
 					<div class="product-content">
-						<h4><a href="product-single.html">Rainbow Shoes</a></h4>
+						<h4><a href="product-single.php">Rainbow Shoes</a></h4>
 						<p class="price">$200</p>
 					</div>
 				</div>
@@ -541,7 +541,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       	</div>
 					</div>
 					<div class="product-content">
-						<h4><a href="product-single.html">Rainbow Shoes</a></h4>
+						<h4><a href="product-single.php">Rainbow Shoes</a></h4>
 						<p class="price">$200</p>
 					</div>
 				</div>
@@ -568,7 +568,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       	</div>
 					</div>
 					<div class="product-content">
-						<h4><a href="product-single.html">Rainbow Shoes</a></h4>
+						<h4><a href="product-single.php">Rainbow Shoes</a></h4>
 						<p class="price">$200</p>
 					</div>
 				</div>
@@ -594,7 +594,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       	</div>
 					</div>
 					<div class="product-content">
-						<h4><a href="product-single.html">Rainbow Shoes</a></h4>
+						<h4><a href="product-single.php">Rainbow Shoes</a></h4>
 						<p class="price">$200</p>
 					</div>
 				</div>
@@ -620,7 +620,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       	</div>
 					</div>
 					<div class="product-content">
-						<h4><a href="product-single.html">Rainbow Shoes</a></h4>
+						<h4><a href="product-single.php">Rainbow Shoes</a></h4>
 						<p class="price">$200</p>
 					</div>
 				</div>
@@ -648,7 +648,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 			        					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem iusto nihil cum. Illo laborum numquam rem aut officia dicta cumque.
 			        				</p>
 			        				<a href="cart.html" class="btn btn-main">Add To Cart</a>
-			        				<a href="product-single.html" class="btn btn-transparent">View Product Details</a>
+			        				<a href="product-single.php" class="btn btn-transparent">View Product Details</a>
 			        			</div>
 			        		</div>
 			        	</div>
@@ -734,7 +734,7 @@ Start Call To Action
 						<a href="contact.html">CONTACT</a>
 					</li>
 					<li>
-						<a href="shop.html">SHOP</a>
+						<a href="shop.php">SHOP</a>
 					</li>
 					<li>
 						<a href="pricing.html">Pricing</a>
