--- a/Shop/typography.html
+++ b/Shop/typography.html
@@ -196,7 +196,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 									<ul>
 										<li class="dropdown-header">Pages</li>
 										<li role="separator" class="divider"></li>
-										<li><a href="shop.html">Shop</a></li>
+										<li><a href="shop.php">Shop</a></li>
 										<li><a href="checkout.html">Checkout</a></li>
 										<li><a href="cart.html">Cart</a></li>
 										<li><a href="pricing.html">Pricing</a></li>
@@ -210,7 +210,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 									<ul>
 										<li class="dropdown-header">Layout</li>
 										<li role="separator" class="divider"></li>
-										<li><a href="product-single.html">Product Details</a></li>
+										<li><a href="product-single.php">Product Details</a></li>
 										<li><a href="shop-sidebar.html">Shop With Sidebar</a></li>
 
 									</ul>
@@ -267,7 +267,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 								<!-- Mega Menu -->
 								<div class="col-sm-3 col-xs-12">
-									<a href="shop.html">
+									<a href="shop.php">
 										<img class="img-responsive" src="images/shop/header-img.jpg" alt="menu image" />
 									</a>
 								</div>
@@ -384,7 +384,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 						<a href="contact.html">CONTACT</a>
 					</li>
 					<li>
-						<a href="shop.html">SHOP</a>
+						<a href="shop.php">SHOP</a>
 					</li>
 					<li>
 						<a href="pricing.html">Pricing</a>
