--- a/Shop/alerts.html
+++ b/Shop/alerts.html
@@ -122,8 +122,8 @@ FACEBOOK: https://www.facebook.com/themefisher
 								<span class="total-price">$1799.00</span>
 							</div>
 							<ul class="text-center cart-buttons">
-								<li><a href="cart.html" class="btn btn-small">View Cart</a></li>
-								<li><a href="checkout.html" class="btn btn-small btn-solid-border">Checkout</a></li>
+								<li><a href="cart.php" class="btn btn-small">View Cart</a></li>
+								<li><a href="checkout.php" class="btn btn-small btn-solid-border">Checkout</a></li>
 							</ul>
 						</div>
 
@@ -197,8 +197,8 @@ FACEBOOK: https://www.facebook.com/themefisher
 										<li class="dropdown-header">Pages</li>
 										<li role="separator" class="divider"></li>
 										<li><a href="shop.php">Shop</a></li>
-										<li><a href="checkout.html">Checkout</a></li>
-										<li><a href="cart.html">Cart</a></li>
+										<li><a href="checkout.php">Checkout</a></li>
+										<li><a href="cart.php">Cart</a></li>
 										<li><a href="pricing.html">Pricing</a></li>
 										<li><a href="confirmation.html">Confirmation</a></li>
 
