--- a/Shop/index_original.html
+++ b/Shop/index_original.html
@@ -123,8 +123,8 @@ FACEBOOK: https://www.facebook.com/themefisher
 								<span class="total-price">$1799.00</span>
 							</div>
 							<ul class="text-center cart-buttons">
-								<li><a href="cart.html" class="btn btn-small">View Cart</a></li>
-								<li><a href="checkout.html" class="btn btn-small btn-solid-border">Checkout</a></li>
+								<li><a href="cart.php" class="btn btn-small">View Cart</a></li>
+								<li><a href="checkout.php" class="btn btn-small btn-solid-border">Checkout</a></li>
 							</ul>
 						</div>
 
@@ -188,8 +188,8 @@ FACEBOOK: https://www.facebook.com/themefisher
 										<li class="dropdown-header">Pages</li>
 										<li role="separator" class="divider"></li>
 										<li><a href="shop.php">Shop</a></li>
-										<li><a href="checkout.html">Checkout</a></li>
-										<li><a href="cart.html">Cart</a></li>
+										<li><a href="checkout.php">Checkout</a></li>
+										<li><a href="cart.php">Cart</a></li>
 										<li><a href="pricing.html">Pricing</a></li>
 										<li><a href="confirmation.html">Confirmation</a></li>
 
@@ -647,7 +647,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 			        				<p class="product-short-description">
 			        					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem iusto nihil cum. Illo laborum numquam rem aut officia dicta cumque.
 			        				</p>
-			        				<a href="cart.html" class="btn btn-main">Add To Cart</a>
+			        				<a href="cart.php" class="btn btn-main">Add To Cart</a>
 			        				<a href="product-single.php" class="btn btn-transparent">View Product Details</a>
 			        			</div>
 			        		</div>
