--- a/Shop/pricing.html
+++ b/Shop/pricing.html
@@ -124,8 +124,8 @@ FACEBOOK: https://www.facebook.com/themefisher
 								<span class="total-price">$1799.00</span>
 							</div>
 							<ul class="text-center cart-buttons">
-								<li><a href="cart.html" class="btn btn-small">View Cart</a></li>
-								<li><a href="checkout.html" class="btn btn-small btn-solid-border">Checkout</a></li>
+								<li><a href="cart.php" class="btn btn-small">View Cart</a></li>
+								<li><a href="checkout.php" class="btn btn-small btn-solid-border">Checkout</a></li>
 							</ul>
 						</div>
 
@@ -201,8 +201,8 @@ FACEBOOK: https://www.facebook.com/themefisher
 									<ul>
 										<li class="dropdown-header">Manage</li>
 										<li role="separator" class="divider"></li>
-										<li><a href="cart.html">Cart</a></li>
-										<li><a href="checkout.html">Checkout</a></li>
+										<li><a href="cart.php">Cart</a></li>
+										<li><a href="checkout.php">Checkout</a></li>
 										<li><a href="confirmation.html">Confirmation</a></li>
 										<li><a href="order.html">Orders</a></li>
 									</ul>
