some cleanup and almost finished

--- a/Shop/faq.html
+++ b/Shop/faq.html
@@ -203,7 +203,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 										<li role="separator" class="divider"></li>
 										<li><a href="cart.php">Cart</a></li>
 										<li><a href="checkout.php">Checkout</a></li>
-										<li><a href="confirmation.html">Confirmation</a></li>
+										<li><a href="confirmation.php">Confirmation</a></li>
 										<li><a href="order.html">Orders</a></li>
 									</ul>
 								</div>
