--- a/Shop/index_original.html
+++ b/Shop/index_original.html
@@ -191,7 +191,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 										<li><a href="checkout.php">Checkout</a></li>
 										<li><a href="cart.php">Cart</a></li>
 										<li><a href="pricing.html">Pricing</a></li>
-										<li><a href="confirmation.html">Confirmation</a></li>
+										<li><a href="confirmation.php">Confirmation</a></li>
 
 									</ul>
 								</div>
